src/objects/LeanData__Graph_Comment__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Author_Id__c</fullName>
        <externalId>true</externalId>
        <label>Author Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Comment Author</relationshipLabel>
        <relationshipName>GraphCommentAuthor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_Saved_By_Id__c</fullName>
        <externalId>true</externalId>
        <label>Last Saved By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_Saved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Saved By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Comment LastSavedBy</relationshipLabel>
        <relationshipName>CommentLastSavedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_Saved_Date__c</fullName>
        <label>Last Saved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Node_Names__c</fullName>
        <label>Node Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Comment Routing Deployment</relationshipLabel>
        <relationshipName>Comment_Routing_Deployment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Graph_Comment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Graph Comment</label>
        <referenceTo>LeanData__Graph_Comment__c</referenceTo>
        <relationshipLabel>Routing Graph Comments</relationshipLabel>
        <relationshipName>Routing_Graph_Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Graph__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Graph</label>
        <referenceTo>LeanData__Routing_Graph__c</referenceTo>
        <relationshipLabel>Routing Graphs</relationshipLabel>
        <relationshipName>Comment_Routing_Graph</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__X_Position__c</fullName>
        <label>X Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Y_Position__c</fullName>
        <label>Y Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Graph Comment</label>
    <nameField>
        <label>Graph Comment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Graph Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>